[gd_scene load_steps=25 format=3 uid="uid://ddkmjx2dv0ayi"]

[ext_resource type="Texture2D" uid="uid://dteoxgwwuiqff" path="res://assets/graphics/ui/empty_bar.png" id="1_0vncs"]
[ext_resource type="Texture2D" uid="uid://7eq5mer1pxy4" path="res://assets/graphics/actors/player/walk.png" id="1_6dvki"]
[ext_resource type="Script" uid="uid://da5kq7y2f00kc" path="res://scripts/character/player.gd" id="1_wa652"]
[ext_resource type="Texture2D" uid="uid://buyjiuts63dj6" path="res://assets/graphics/actors/player/actions.png" id="2_5ry7u"]
[ext_resource type="Texture2D" uid="uid://dbnvr8irj1m4s" path="res://assets/graphics/ui/bar.png" id="2_wa652"]
[ext_resource type="Texture2D" uid="uid://dbgyd1nvp5fir" path="res://assets/graphics/ui/heart_bar.png" id="3_ov4oa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dvki"]
size = Vector2(16, 24)

[sub_resource type="Animation" id="Animation_5ry7u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_1d8tq"]
resource_name = "attack_back"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_w7y54"]
resource_name = "attack_front"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_ngd17"]
resource_name = "attack_side"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_a0mrq"]
resource_name = "idle_back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 4]
}

[sub_resource type="Animation" id="Animation_6dvki"]
resource_name = "idle_front"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_0l8aq"]
resource_name = "idle_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 12]
}

[sub_resource type="Animation" id="Animation_ov4oa"]
resource_name = "mining_back"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 2]
}

[sub_resource type="Animation" id="Animation_uectf"]
resource_name = "mining_front"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_6wvkl"]
resource_name = "mining_side"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 4]
}

[sub_resource type="Animation" id="Animation_wa652"]
resource_name = "walk_back"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_0vncs"]
resource_name = "walk_front"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_6eyh6"]
resource_name = "walk_side"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0mrq"]
_data = {
&"RESET": SubResource("Animation_5ry7u"),
&"attack_back": SubResource("Animation_1d8tq"),
&"attack_front": SubResource("Animation_w7y54"),
&"attack_side": SubResource("Animation_ngd17"),
&"idle_back": SubResource("Animation_a0mrq"),
&"idle_front": SubResource("Animation_6dvki"),
&"idle_side": SubResource("Animation_0l8aq"),
&"mining_back": SubResource("Animation_ov4oa"),
&"mining_front": SubResource("Animation_uectf"),
&"mining_side": SubResource("Animation_6wvkl"),
&"walk_back": SubResource("Animation_wa652"),
&"walk_front": SubResource("Animation_0vncs"),
&"walk_side": SubResource("Animation_6eyh6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ry7u"]
size = Vector2(104, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vncs"]
size = Vector2(29, 34)

[sub_resource type="CircleShape2D" id="CircleShape2D_wa652"]
radius = 54.0093

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_wa652")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="score_text" type="Label" parent="Camera2D"]
offset_left = 205.0
offset_top = -154.0
offset_right = 253.0
offset_bottom = -131.0
text = "Score:"

[node name="score_int" type="Label" parent="Camera2D"]
offset_left = 258.0
offset_top = -153.0
offset_right = 298.0
offset_bottom = -130.0
text = "0"

[node name="TextureProgressBar" type="TextureProgressBar" parent="Camera2D"]
offset_left = -283.0
offset_top = -154.0
offset_right = -118.0
offset_bottom = -109.0
texture_under = ExtResource("1_0vncs")
texture_over = ExtResource("2_wa652")
texture_progress = ExtResource("3_ov4oa")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_6dvki")
hframes = 4
vframes = 4

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("2_5ry7u")
hframes = 2
vframes = 12
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_6dvki")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a0mrq")
}

[node name="mining_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="mining_area"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_5ry7u")

[node name="healt_box" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="healt_box"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_0vncs")
debug_color = Color(0.984401, 0, 0.343919, 0.42)

[node name="hit_box" type="Area2D" parent="."]
position = Vector2(-1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_wa652")

[connection signal="body_entered" from="healt_box" to="." method="_on_healt_box_body_entered"]
[connection signal="body_exited" from="healt_box" to="." method="_on_healt_box_body_exited"]
[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="hit_box" to="." method="_on_hit_box_body_exited"]
